<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.company.abadarau.acmeincapp.MainActivity">

    <ScrollView
            android:layout_width="368dp"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="8dp"
            tools:layout_editor_absoluteX="8dp">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="8dp"
                tools:layout_editor_absoluteX="8dp" android:id="@+id/companyPrezentation_LL">
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="125dp" tools:layout_editor_absoluteY="8dp"
                    tools:layout_editor_absoluteX="8dp" android:id="@+id/companyLogo_IV" android:scaleType="fitCenter"
                    android:src="@drawable/company_logo" android:contentDescription="CompanyLogo"/>
            <TextView
                    android:text="@string/app_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/companyHeader_TV"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault" android:fontFamily="monospace"
                    android:typeface="monospace" android:textSize="18sp" android:textStyle="bold|italic"
                    android:textColor="@android:color/holo_red_dark" android:textAllCaps="true"/>
            <TextView
                    android:text="@string/company_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/companyDescription_TV"
                    android:layout_weight="1"/>
            <ImageView
                    android:src="@drawable/acme_catalog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/product1_IV"/>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/companyDetails_LL">
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/adress_LL">
                    <TextView
                            android:text="@string/addressLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/addressLabel_TV"
                            android:layout_weight="0" android:layout_gravity="center_vertical|center"/>
                    <TextView
                            android:text="@string/companyAddress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/addressContent_TV"
                            android:layout_weight="0" android:clickable="false"
                            android:layout_gravity="center_vertical|center" android:autoLink="map"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/hours_LL">
                    <TextView
                            android:text="@string/hoursLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/hoursLable_TV"
                            android:layout_weight="1"/>
                    <TextView
                            android:text="@string/hoursContent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/hoursContent_TV"
                            android:layout_weight="1"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" android:id="@+id/contact_LL">
                    <TextView
                            android:text="@string/contactLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/contactLabel_TV"
                            android:layout_weight="1"/>
                    <TextView
                            android:text="@string/contactContent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/contactContent_TV"
                            android:layout_weight="1" android:autoLink="phone"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
